kubernetes/final/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
#    alb.ingress.kubernetes.io/group.name: dev-alb
#    alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /news-crawler(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: news-crawler-service
                port:
                  number: 80
          - path: /pre-process(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: preprocess-app-service
                port:
                  number: 80
          # - path: /modeling(/|$)(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: modeling-app-service
          #       port:
          #         number: 80
